<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="100"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="30"
        android:layout_height="0dp"
        android:weightSum="10"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/smallButton"
            android:text="@string/small_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/big_button"
            tools:ignore="ButtonStyle,NestedWeights" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:background="@drawable/compass">

        <Button
            android:id="@+id/north"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/north"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/east"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/east"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/south"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/south"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true" />

        <Button
            android:id="@+id/west"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/west"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center"
            android:layout_centerInParent="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/north"
            android:layout_above="@+id/east"
            android:text="@string/ne"
            android:layout_toStartOf="@+id/east"
            android:layout_toEndOf="@+id/north" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/se"
            android:layout_below="@+id/east"
            android:layout_above="@+id/south"
            android:layout_toStartOf="@+id/east"
            android:layout_toEndOf="@+id/south" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sw"
            android:layout_below="@+id/west"
            android:layout_above="@+id/south"
            android:layout_toStartOf="@+id/south"
            android:layout_toEndOf="@+id/west" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nw"
            android:layout_below="@+id/north"
            android:layout_above="@+id/west"
            android:layout_toStartOf="@+id/north"
            android:layout_toEndOf="@+id/west" />

    </RelativeLayout>


</LinearLayout>